fix: prevent text on list overflowing

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -127,6 +127,12 @@ body {
         cursor: pointer;
     }
 
+    .added__url {
+        max-width: calc(100% - 35px);
+        overflow: hidden;
+        word-break: break-all;
+    }
+
 
 .do {
     display: flex;
@@ -242,8 +248,8 @@ body {
 .version {
     position: fixed;
     z-index: 10;
-    right: 1rem;
-    bottom: 1rem;
+    right: 1.7rem;
+    bottom: 1.7rem;
     font-size: 1rem;
     color: #00ff08;
 }
